[package]
name = "randoms"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
csv = "1.3.1"
integrate = "0.1.11"
interp = "2.1.1"
libm = "0.2.15"
ndhistogram = "0.10.0"
polars = "0.51.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
roots = "0.0.8"
rtnorm-rust = "0.1.0"
statrs = "0.18.0"
