[package]
name = "randoms"
version = "0.1.0"
edition = "2024"
description = "Generating randoms catalogue for redshift surveys."
license = "MIT"

[lib]
name = "randoms"
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
integrate = "0.1.11"
interp = "2.1.1"
libm = "0.2.15"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
roots = "0.0.8"
statrs = "0.18.0"
